--- a/fimco/pochi/templates/pochi/main.html
+++ b/fimco/pochi/templates/pochi/main.html
@@ -43,6 +43,11 @@
 								<i class="main-icon fa fa-dashboard"></i> <span>Dashboard</span>
 							</a>
 						</li>
+                        <li><!-- accounts -->
+							<a href="{% url 'accounts' %}">
+								<i class="main-icon fa fa-credit-card"></i> <span>Add account</span>
+							</a>
+						</li>
                         <li><!-- statement -->
 							<a href="{% url 'statements' %}">
 								<i class="main-icon fa fa-file-text-o"></i> <span>Statement</span>
