--- a/fimco/fimcosite/templates/login.html
+++ b/fimco/fimcosite/templates/login.html
@@ -8,12 +8,14 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4 offset-md-4">
-                    {% if lForm.errors %}
-                        <!-- ALERT -->
-                        <div class="alert alert-mini alert-danger mb-30">
-                            <strong>Incorrect credentials!</strong> Please try again.
-                        </div>
-                        <!-- /ALERT -->
+                    {% if messages %}
+                        {% for message in messages %}
+                            <!-- ALERT -->
+                            <div class="alert alert-mini alert-danger mb-30">
+                                <strong>{{ message }}</strong> Please try again.
+                            </div>
+                            <!-- /ALERT -->
+                        {% endfor %}
                     {% endif %}
                     {% if next %}
                         <!-- ALERT -->
