--- a/fimco/pochi/templates/pochi/withdrawal.html
+++ b/fimco/pochi/templates/pochi/withdrawal.html
@@ -2,31 +2,34 @@
 {% block content %}
     <section id="middle" style="background-color: #ebebeb">
         <div id="content" class="padding-20">
-            <form class="payment" method="post" action="{% url 'withdraw' %}">
-                {% csrf_token %}
-                <div class="panel panel-default">
-                    <div class="panel-heading panel-heading-transparent">
-                        <strong>Withdraw Funds</strong>
+            <div class="col-lg-6">
+                <form class="payment" method="post" action="{% url 'withdraw' %}">
+                    {% csrf_token %}
+                    <div class="panel panel-default">
+                        <div class="panel-heading panel-heading-transparent">
+                            <strong>Withdraw Funds</strong>
+                        </div>
+                        <div class="panel-body">
+                            <div class="fancy-form fancy-form-select">
+                                <select class="form-control">
+                                    <option value="">Select your account</option>
+                                    <option value="1">CRDB</option>
+                                    <option value="2">M-PESA</option>
+                                    <option value="3">AIRTEL MONEY</option>
+                                </select>
+                                <i class="fancy-arrow"></i>
+                            </div>
+                            <br />
+                            <label>Enter Amount</label>
+                            <input type="number" class="form-control" name="amount" placeholder="TZS">
+                            <br />
+                        </div>
+                        <div class="panel-footer transfer">
+                            <button class="btn btn-primary" type="submit"><i class="fa fa-check"></i> CONFIRM MONEY TRANSFER</button>
+                        </div>
                     </div>
-                    <div class="panel-body">
-                        <label>Enter Phone Number </label>
-                        <div class="fancy-form"><!-- input -->
-                            <i class="fa fa-phone-square"></i>
-                            <input type="text" class="form-control masked" name="phone" data-format="0999 999999" data-placeholder="X" placeholder="">
-                            <span class="fancy-tooltip top-left"> <!-- positions: .top-left | .top-right -->
-                                <em>Type recipient's phone number</em>
-                            </span>
-                        </div><!-- /input -->
-                        <br />
-                        <label>Enter Amount</label>
-                        <input type="number" class="form-control" name="amount" placeholder="TZS">
-                        <br />
-                    </div>
-                    <div class="panel-footer transfer">
-                        <button class="btn btn-primary" type="submit"><i class="fa fa-check"></i> CONFIRM MONEY TRANSFER</button>
-                    </div>
-                </div>
-            </form>
+                </form>
+            </div>
         </div>
     </section>
 {% endblock %}
