session timeout and profile updates

--- a/fimco/fimcosite/static/css/reg.css
+++ b/fimco/fimcosite/static/css/reg.css
@@ -2,6 +2,11 @@
     display: none;
 }
 
+.sky-form fieldset {
+    padding: 0;
+    margin-bottom: 0;
+}
+
 .sky-form fieldset+fieldset {
     border: none;
 }
