--- a/fimco/fimcosite/static/css/main.css
+++ b/fimco/fimcosite/static/css/main.css
@@ -51,3 +51,23 @@ a.no-text-decoration {
     float: none;
     margin: 0 auto;
 }
+
+.modal-content {
+    border: 0;
+    border-top: #002A54 4px solid;
+}
+
+.box-icon.box-icon-transparent .box-icon-title>i {
+    /*background-color: transparent;*/
+    border: #ccc 1px solid;
+    color: #002A54;
+}
+
+ul.process-steps li a.active, ul.process-steps li a.active:focus, ul.process-steps li:hover>a.active {
+    background-color: #002A54 !important;
+    border-color: #002A54 !important;
+}
+
+.nav-tabs>li>a.active {
+    color: #002A54 !important;
+}
