changed market to fimcoplatform

--- a/fimco/fimcosite/templates/registration.html
+++ b/fimco/fimcosite/templates/registration.html
@@ -12,7 +12,7 @@
                         {% for error in rForm.errors %}
                             <!-- ALERT -->
                             <div class="alert alert-mini alert-danger mb-30">
-                                <strong>Oh snap! {{ error }}</strong>
+                                <strong>Oh snap! There is an error in field {{ error }}</strong>
                             </div>
                             <!-- /ALERT -->
                         {% endfor %}
