--- a/fimco/fimcosite/templates/registration.html
+++ b/fimco/fimcosite/templates/registration.html
@@ -10,11 +10,17 @@
                 <div class="col-md-6 col-sm-6 offset-md-3 offset-sm-3">
                     {% if rForm.errors %}
                         {% for error in rForm.errors %}
-                            <!-- ALERT -->
-                            <div class="alert alert-mini alert-danger mb-30">
-                                <strong>Oh snap! There is an error in field {{ error }}</strong>
-                            </div>
-                            <!-- /ALERT -->
+                            {% if error == '__all__' %}
+                                {% for general_error in rForm.non_field_errors %}
+                                    <div class="alert alert-mini alert-danger mb-30">
+                                        <strong>{{ general_error }}</strong>
+                                    </div>
+                                {% endfor %}
+                            {% else %}
+                                <div class="alert alert-mini alert-danger mb-30">
+                                    <strong>Oh snap! There is an error in field {{ error }}</strong>
+                                </div>
+                            {% endif %}
                         {% endfor %}
                     {% endif %}
                     <div class="box-static box-transparent box-bordered p-30">
@@ -60,7 +66,7 @@
                                     <div class="col-md-6 col-sm-6">
                                         <label for="register:dob">Date of Birth <small>(required)</small></label>
                                         <label class="input mb-10">
-                                            <i class="ico-append fa fa-calendar"></i>
+{#                                            <i class="ico-append fa fa-calendar"></i>#}
                                             {{ rForm.dob }}
                                             <b class="tooltip tooltip-bottom-right">Date of Birth</b>
                                         </label>
