--- a/fimco/fimcosite/templates/top-bar.html
+++ b/fimco/fimcosite/templates/top-bar.html
@@ -10,7 +10,7 @@
                 <li id="login"><a href="{% url 'logout' %}?next={{request.path}}">LOGOUT</a></li>
             {% else %}
                 <li id="login"><a href="{% url 'login' %}?next={{request.path}}">LOGIN</a></li>
-                <li id="invest"><a href="" data-toggle="modal" data-target="#accountTypeModal">INVEST NOW</a></li>
+                <li id="invest"><a href="" data-toggle="modal" data-target="#accountTypeModal">REGISTER</a></li>
             {% endif %}
 {#            <li>#}
 {#                <a class="no-text-underline" href="#"><img class="flag-lang" src="static/img/flags/tz.png" width="16" height="11" alt="lang" /> SWAHILI</a>#}
