--- a/fimco/pochi/templates/pochi/main.html
+++ b/fimco/pochi/templates/pochi/main.html
@@ -36,12 +36,63 @@
 			-->
 			<aside id="aside">
 				<nav id="sideNav"><!-- MAIN MENU -->
+
+					<h3>MARKET INFORMATION</h3>
+					<ul class="nav nav-list">
+						<li>
+							<a href="{% url 'markets' %}">
+								<i class="main-icon fa fa-cart-arrow-down"></i>
+								<span class="label label-success pull-right">2</span> <span>Market Home</span>
+							</a>
+						</li>
+						<li>
+							<a href="{% url 'exchange' %}">
+								<i class="main-icon fa fa-exchange"></i> <span>Exchange Rates</span>
+							</a>
+						</li>
+                        <li>
+							<a href="{% url 'interests' %}">
+								<i class="main-icon fa fa-bar-chart-o"></i> <span>Interests Rates</span>
+							</a>
+						</li>
+						<li>
+							<a href="{% url 'share' %}">
+								<i class="main-icon fa fa-table"></i> <span>Share Prices</span>
+							</a>
+						</li>
+						<li>
+							<a href="{% url 'macro' %}">
+								<i class="main-icon fa fa-pencil-square-o"></i> <span>Macro Data</span>
+							</a>
+						</li>
+						<li>
+							<a href="{% url 'auction' %}">
+								<i class="main-icon fa fa-gift"></i> <span>Auction Data</span>
+							</a>
+						</li>
+						<li>
+							<a href="{% url 'commodities' %}">
+								<i class="main-icon fa fa-money"></i> <span>Commodity Prices</span>
+							</a>
+						</li>
+					</ul>
+
                     <h3 style="margin: 10px">POCHI</h3>
 					<ul class="nav nav-list">
                         <li><!-- dashboard -->
 							<a class="dashboard" href="{% url 'dashboard' %}">
-								<i class="main-icon fa fa-dashboard"></i> <span>Dashboard</span>
+								<i class="main-icon fa fa-dashboard"></i> <span>Home</span>
 							</a>
+						</li>
+                        <li class="active"><!-- my pochi -->
+							<a href="">
+								<i class="main-icon fa fa-user"></i>
+                                <i class="fa fa-menu-arrow pull-right"></i><span>My POCHI</span>
+							</a>
+                            <ul>
+                                <li><a href="">Link accounts</a></li>
+                                <li><a href="">Add accounts</a></li>
+                            </ul>
 						</li>
                         <li><!-- statement -->
 							<a href="{% url 'statements' %}">
@@ -65,57 +116,21 @@
 						</li>
 					</ul>
 
-{#					<!-- SECOND MAIN LIST -->#}
-{#					<h3>MARKET INFORMATION</h3>#}
-{#					<ul class="nav nav-list">#}
-{#						<li>#}
-{#							<a href="{% url 'markets' %}">#}
-{#								<i class="main-icon fa fa-cart-arrow-down"></i>#}
-{#								<span class="label label-success pull-right">2</span> <span>Markets Home</span>#}
-{#							</a>#}
-{#						</li>#}
-{#						<li>#}
-{#							<a href="{% url 'exchange' %}">#}
-{#								<i class="main-icon fa fa-exchange"></i> <span>Exchange Rates</span>#}
-{#							</a>#}
-{#						</li>#}
-{#                        <li>#}
-{#							<a href="{% url 'interests' %}">#}
-{#								<i class="main-icon fa fa-bar-chart-o"></i> <span>Interests Rates</span>#}
-{#							</a>#}
-{#						</li>#}
-{#						<li>#}
-{#							<a href="{% url 'share' %}">#}
-{#								<i class="main-icon fa fa-table"></i> <span>Share Prices</span>#}
-{#							</a>#}
-{#						</li>#}
-{#						<li>#}
-{#							<a href="{% url 'macro' %}">#}
-{#								<i class="main-icon fa fa-pencil-square-o"></i> <span>Macro Data</span>#}
-{#							</a>#}
-{#						</li>#}
-{#						<li>#}
-{#							<a href="{% url 'auction' %}">#}
-{#								<i class="main-icon fa fa-gift"></i> <span>Auction Data</span>#}
-{#							</a>#}
-{#						</li>#}
-{#						<li>#}
-{#							<a href="{% url 'commodities' %}">#}
-{#								<i class="main-icon fa fa-money"></i> <span>Commodity Prices</span>#}
-{#							</a>#}
-{#						</li>#}
-{#					</ul>#}
-
-                    <!-- THIRD MAIN LIST -->
-					<h3>MY GROUPS</h3>
+					<h3>POCHI GROUPS</h3>
 					<ul class="nav nav-list">
                         {% if groups %}
                             {% for group in groups %}
-                                <li>
+                                <li class="active">
                                     <a href="">
                                         <i class="main-icon fa fa-users"></i>
                                         <span class="label label-info pull-right"></span> <span>{{ group }}</span>
                                     </a>
+                                    <ul>
+                                        <li class="active"><a href="">Dashboard</a></li>
+                                        <li><a href="">Statement</a></li>
+                                        <li><a href="">Add member</a></li>
+                                        <li><a href="">Settings</a></li>
+                                    </ul>
                                 </li>
                             {% endfor %}
                         {% else %}
